# hw_3_web

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/common/: logger.hpp  protocol.hpp  socket_wrapper.hpp
src/p2p/: p2p_client.cpp  p2p_client.hpp
src/rendezvous/: rendezvous_server.cpp  rendezvous_server.hpp
